fixed bugs -> still have to remove show if not current users post + fix-style bug

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -12,6 +12,6 @@
     <h3>Sign Up to Join and Add Your own: Name, Instrument and Genre of Music to the Line Up</h3>
 
     <%# <% if user_signed_in? %>
-      <%= button_to "posts", posts_path, class: "btn-primary btn-lg"%>
+      <%= link_to "Sign Up And Add Your Information", posts_path, class: "btn-primary btn-lg"%>
     <%# <% end %>
 </div>
