initial background img

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 
 
 /* Components */
-  /* @import "components/navbar"; */
+  @import "components/navbar";
 
 /* Pages Styling */
- @import "pages/index";
+  @import "pages/index";
