--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,27 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Open Mic Sign Up</h1>
+<div class="signUp" style="text-align: center">
+  <h1>Open Mic Sign Up</h1>
 
-<% if user_signed_in? %>
-    <%= link_to "New Post", new_post_path, class: "btn-primary btn-lg" %>
-  <% end %>
-
-<% if user_signed_in? %>
-  <div id="posts">
-    <% @posts.each do |post| %>
-      <%= render post %>
-      <p>
-        <%= link_to "Show post", post %>
-      </p>
+  <% if user_signed_in? %>
+      <%= link_to "Sign Up", new_post_path, class: "btn-primary btn-lg" %>
     <% end %>
-<% else %>
-    <%= link_to "Sign Up", new_user_session_path %>
-  <% end %>
+    <hr>
+  <% if user_signed_in? %>
+    <div id="posts">
+      <% @posts.each do |post| %>
+        <div class="container post">
+          <%= render post %>
+        </div>
+        <p>
+          <%# <% if @current_user == @post.user_id %>
+          <%= link_to "View", post %>
+          <%# <% end %>
+        </p>
+      <% end %>
+  <% else %>
+      <%= link_to "Sign Up", new_user_session_path %>
+    <% end %>
 
+  </div>
 </div>
