--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon" style="display:flex;">
+<div class="navbar navbar-expand-sm" style="display:flex;">
   <div class="container-fluid">
-    <%= link_to "/", class: "navbar-brand" do %>
-     <% image_tag ("http://cdn.shopify.com/s/files/1/0586/3827/0672/products/Luus-Muus-Gift-Card.png?v=1626674261"), style: 'width: 150px;' %>
-    <% end %>
+    <%= link_to "Luus Muus", "/", class: "navbar-brand" %>
+     <%# <% image_tag ("http://cdn.shopify.com/s/files/1/0586/3827/0672/products/Luus-Muus-Gift-Card.png?v=1626674261"), style: 'width: 150px;' %>
+    <%# <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
