fix div layout styling

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,8 @@
-a {
-  color: antiquewhite;
-}
-
+// Styling
 
 .navbar-brand {
   color: antiquewhite;
-
+  a.nav-link  {
+    color: antiquewhite;
+  }
 }
