--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="footer" style="text-align:center; padding:50px;">
   <hr>
+  <h6>©Luus Muus AG 2021</h6>
 
-  <h6>© luus muus ag 2021</h6>
 </div>
