--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style="text-align:center;">
   <div class="title">
     <h1>Open Mic Night</h1>
-      <h3>Join Us On the 15th of July for our Open Mic Night at the Luus Muus in Egg</h3>
+      <h3 class="date">Join Us On the 15th of July for our Open Mic Night at the Luus Muus in Egg</h3>
   </div>
   <div class="information">
     <h3>Benefits and Rules For Performers</h3>
@@ -9,8 +9,10 @@
       <h5>One Free Drink</h5>
       <h5>50% Off Drinks & Food</h5>
   </div>
-    <h3>Sign Up to Join and Add Your own: Name, Instrument and Genre of Music to the Line Up</h3>
 
+  <div class="cta">
+    <h3>Sign Up to Join and Add Your own: Name, Instrument and Genre of Music to the Line Up</h3>
+  </div>
     <%# <% if user_signed_in? %>
       <%= link_to "Sign Up And Add Your Information", posts_path, class: "btn-primary btn-lg"%>
     <%# <% end %>
