--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,19 +1,18 @@
-<div class="container">
-  <div id="<%= dom_id post %>">
-    <p>
-      <strong>Name:</strong>
-      <%= post.name %>
-    </p>
+<div>
+  <p>
+    <strong>Name:</strong>
+    <%= post.name %>
+  </p>
 
-    <p>
-      <strong>Instrument:</strong>
-      <%= post.instrument %>
-    </p>
+  <p>
+    <strong>Instrument:</strong>
+    <%= post.instrument %>
+  </p>
 
-    <p>
-      <strong>Genre:</strong>
-      <%= post.genre %>
-    </p>
-
-  </div>
+  <p>
+    <strong>Genre:</strong>
+    <%= post.genre %>
+  </p>
 </div>
+
+<%# id="<%= dom_id post %>
