--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="cta">
-    <h3>Sign Up to Join and Add Your own: Name, Instrument and Genre of Music to the Line Up</h3>
+    <h3>Sign Up to Join and Add Your own: Name, Instrument and Genre of Music to join the Line Up</h3>
   </div>
     <%# <% if user_signed_in? %>
       <%= link_to "Sign Up And Add Your Information", posts_path, class: "btn-primary btn-lg"%>
