--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,27 +4,44 @@ body {
   background-image: url(https://images.unsplash.com/photo-1595971294624-80bcf0d7eb24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80);
   background-attachment: fixed;
   background-position: center;
+  font-family: Arial, Helvetica, sans-serif;
  }
 
 .container {
   color: antiquewhite;
   letter-spacing: 0.3em;
+  backdrop-filter: blur(3px);
 }
 
 // Sections
 .title {
   padding-top: 1.5em;
   padding-bottom: 1.5em;
+  h1 {
+    font-weight: 900;
+  }
 }
 
 .date {
+  padding-top: 2.5em;
   padding-bottom: 2.5em;
+  font-weight: 700;
 }
 
 .information {
   padding-bottom: 2.5em;
+  padding-bottom: 2.5em;
+  h3 {
+    font-weight: 700;
+  }
+  h5 {
+    font-weight: 700;
+  }
 }
 
 .cta {
   padding-bottom: 4.5em;
+  h3 {
+    font-weight: 900;
+  }
 }
