--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
 <div class="signUp" style="text-align: center">
-  <div class="titlePost"></div>
+  <div class="titlePost">
   <h1>Open Mic Sign Up</h1>
+  </div>
+
   <div class="buttonSignUp">
   <% if user_signed_in? %>
       <%= link_to "Sign Up", new_post_path, class: "btn-primary btn-lg" %>
