--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,15 @@
-<h1>New Post</h1>
+<div class="container">
 
-<%= render "form", post: @post %>
+  <div class="titlepost">
+      <h1>New Submission</h1>
+  </div>
 
-<br>
+  <div class="newForm">
+    <%= render "form", post: @post %>
+  </div>
+  <br>
 
-<div>
-  <%= link_to "Back to posts", posts_path %>
+  <div>
+    <%= link_to "Back to posts", posts_path, class: "btn btn-light backBtn" %>
+  </div>
 </div>
