--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,16 @@
-<h1>Edit post</h1>
+<div class="container">
+  <div class="titlepost">
+    <h1>Edit Submission</h1>
+  </div>
 
-<%= render "form", post: @post %>
+  <div class="editForm">
+    <%= render "form", post: @post %>
+  </div>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
+  <div>
+    <%= link_to "View Submission", @post, class: "btn btn-primary backBtn" %> |
+    <%= link_to "Back to SignUp List", posts_path, class: "btn btn-light backBtn" %>
+  </div>
 </div>
