--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
-<p style="color: green"><%= notice %></p>
 
-<div class="signUp" style="text-align: center">
+<p style="color: chartreuse; font-size: 1.5em;"><%= notice %></p>
+
+<div class="signUp">
   <div class="titlePost">
   <h1>Open Mic Sign Up</h1>
   </div>
@@ -13,7 +14,7 @@
     <hr>
       <div class="post-section">
         <% if user_signed_in? %>
-          <div id="posts">
+          <%# <div id="posts"> %>
             <% @posts.each do |post| %>
               <div class="post">
                 <%= render post %>
@@ -26,10 +27,10 @@
 
             <% end %>
         <% else %>
-            <%= link_to "Sign Up", new_user_session_path %>
+            <%= link_to "Sign Up", new_user_session_path, class: "btn-primary btn-lg" %>
           <% end %>
 
-        </div>
+        <%# </div> %>
     </div>
   <hr>
 </div>
