--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,7 +27,7 @@
 
             <% end %>
         <% else %>
-            <%= link_to "Sign Up", new_user_session_path, class: "btn-primary btn-lg" %>
+            <%= link_to "Sign Up", new_user_registration_path, class: "btn-primary btn-lg" %>
           <% end %>
 
         <%# </div> %>
