--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -10,7 +10,7 @@
   <br>
 
   <div>
-    <%= link_to "View Submission", @post, class: "btn btn-primary backBtn" %> |
+    <%= link_to "View Submission", @post, class: "btn btn-primary backBtn" %>
     <%= link_to "Back to SignUp List", posts_path, class: "btn btn-light backBtn" %>
   </div>
 </div>
