--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,13 +9,16 @@
     </button>
 
     <div class="navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
             <%= link_to "Home", "/", class: "nav-link" %>
           </li>
-           <li class="nav-item">
-            <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "btn-danger" %>
+          <li class="nav-item active">
+            <%= link_to "Submissions", posts_path, class: "nav-link" %>
+          </li>
+           <li class="nav-item active">
+            <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "btn-danger btn btn-sm" %>
           </li>
             </div>
         <% else %>
