added favicon - post heroku deploy

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
             </div>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link btn-primary" %>
+            <%= link_to "Login", new_user_session_path, class: "nav-link btn btn-sm btn-primary" %>
           </li>
         <% end %>
       </ul>
