devise login +signup title inc size

--- a/app/assets/stylesheets/pages/_devise.scss
+++ b/app/assets/stylesheets/pages/_devise.scss
@@ -10,6 +10,15 @@
   font-size: 1em;
 }
 
+// sign up
+
+.titleDevise {
+  h1 {
+    font-size: 3em;
+    font-weight: 600;
+  }
+}
+
 // links
 .btnForgot {
   margin-top: 4.5em;
