--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,16 +4,25 @@
       <h3 class="date">Join Us On the 15th of July for our Open Mic Night at the Luus Muus in Egg</h3>
   </div>
   <div class="information">
-    <h3>Benefits and Rules For Performers</h3>
+    <div class="rules">
+      <h3>Rules For Performers</h3>
       <h5>3 Songs Per Performer</h5>
+      <h5>1 Submission Per Performer</h5>
+    </div>
+
+    <div class="benefits">
+      <h3>Benefits</h3>
       <h5>One Free Drink</h5>
       <h5>50% Off Drinks & Food</h5>
+      </div>
   </div>
 
   <div class="cta">
     <h3>Sign Up to Join and Add Your own: Name, Instrument and Genre of Music to join the Line Up</h3>
   </div>
-    <%# <% if user_signed_in? %>
-      <%= link_to "Sign Up And Add Your Information", posts_path, class: "btn-primary btn-lg"%>
+
+  <div class="btnIndex">
+    <%= link_to "Sign Up And Add Your Information", posts_path, class: "btn-primary btn-lg"%>
+  </div>
     <%# <% end %>
 </div>
