added data msg footer - other genre / other (translationreason)

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,7 +6,7 @@
   <div class="information">
     <div class="rules">
       <h3>Rules For Performers</h3>
-      <h5>3 Songs Per Performer</h5>
+      <h5>3 Song's Per Performer</h5>
       <h5>1 Submission Per Performer</h5>
     </div>
 
