added guest message -> to sign up to make submission

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,6 +28,8 @@
 
               <% end %>
           <% else %>
+              <hr>
+              <h4 style="margin-bottom:1.5em;">Sign up with your email and a simple password to create a submission</h4>
               <%= link_to "Sign Up", new_user_registration_path, class: "btn-primary btn-lg" %>
             <% end %>
     </div>
