--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="cta">
-    <h3>Sign Up to Join and Add Your own: Name, Instrument and Genre of Music to join the Line Up</h3>
+    <h3>Sign Up to Join and Add Your: Name, Instrument and Genre of Music to join the Line Up</h3>
   </div>
 
   <div class="btnIndex">
