root ppage btstrp btn

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="btnIndex">
-    <%= link_to "Sign Up And Add Your Information", posts_path, class: "btn-primary btn-lg"%>
+    <%= link_to "Sign Up And Add Your Information", posts_path, class: "btn-primary btn btn-lg"%>
   </div>
     <%# <% end %>
 </div>
