--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,28 +1,28 @@
 <div class="container" style="text-align:center;">
   <div class="title">
     <h1>Open Mic Night</h1>
-      <h3 class="date">Join Us On the 15th of July for our Open Mic Night at the Luus Muus in Egg</h3>
+      <h3 class="date">Join us on the 15th of July for our Open Mic Night at the Luus Muus in Egg</h3>
   </div>
   <div class="information">
     <div class="rules">
-      <h3>Rules For Performers</h3>
-      <h5>3 Song's Per Performer</h5>
-      <h5>1 Submission Per Performer</h5>
+      <h3>Rules for performers</h3>
+      <h5>3 songs per set</h5>
+      <h5>1 set per performer</h5>
     </div>
 
     <div class="benefits">
       <h3>Benefits</h3>
-      <h5>One Free Drink</h5>
-      <h5>50% Off Drinks & Food</h5>
+      <h5>One free drink</h5>
+      <h5>50% off food & drinks</h5>
       </div>
   </div>
 
   <div class="cta">
-    <h3>Sign Up to Join and Add Your: Name, Instrument and Genre of Music to join the Line Up</h3>
+    <h3>Sign up to join the line up on July 15</h3>
   </div>
 
   <div class="btnIndex">
-    <%= link_to "Sign Up And Add Your Information", posts_path, class: "btn-primary btn btn-lg"%>
+    <%= link_to "Sign Up", posts_path, class: "btn-primary btn btn-lg"%>
   </div>
     <%# <% end %>
 </div>
