--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
       <div class="post-section">
 
           <% if user_signed_in? %>
-          <h2>Current Submissions</h2>
+          <h2>Current submissions</h2>
               <% @posts.each do |post| %>
                 <div class="post">
                   <%= render post %>
