new info + title change

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="text-align:center;">
   <div class="title">
-    <h1>Open Mic Night</h1>
+    <h1>First Monthly Open Mic Night</h1>
       <h3 class="date">Join us on the 15th of July for our Open Mic Night at the Luus Muus in Egg</h3>
   </div>
   <div class="information">
@@ -8,6 +8,9 @@
       <h3>Rules for performers</h3>
       <h5>3 songs per set</h5>
       <h5>1 set per performer</h5>
+      <h5>Musicians arrive 6:30</h5>
+      <h5>Event is 7-10pm</h5>
+      <h5>Original music especially encouraged</h5>
     </div>
 
     <div class="benefits">
