--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="titlepost">
-    <h1>Edit Submission</h1>
+    <h1>Edit Registration</h1>
   </div>
 
   <div class="editForm">
@@ -10,7 +10,7 @@
   <br>
 
   <div>
-    <%= link_to "View Submission", @post, class: "btn btn-primary backBtn" %>
-    <%= link_to "Back to SignUp List", posts_path, class: "btn btn-light backBtn" %>
+    <%= link_to "View Registration", @post, class: "btn btn-primary backBtn" %>
+    <%= link_to "Back to List", posts_path, class: "btn btn-light backBtn" %>
   </div>
 </div>
