--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
       <div class="post-section">
 
           <% if user_signed_in? %>
-          <h2>Current submissions</h2>
+          <h2>Current Registrations</h2>
               <% @posts.each do |post| %>
                 <div class="post">
                   <%= render post %>
@@ -29,7 +29,7 @@
               <% end %>
           <% else %>
               <hr>
-              <h4 style="margin-bottom:1.5em;">Sign up with your email and a simple password to create a submission</h4>
+              <h4 style="margin-bottom:1.5em;">Sign up with your email and a simple password to register</h4>
               <%= link_to "Sign Up", new_user_registration_path, class: "btn-primary btn-lg" %>
             <% end %>
     </div>
