--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="titlepost">
-      <h1>New Submission</h1>
+      <h1>New Registration</h1>
   </div>
 
   <div class="newForm">
@@ -10,6 +10,6 @@
   <br>
 
   <div>
-    <%= link_to "Back to posts", posts_path, class: "btn btn-light backBtn" %>
+    <%= link_to "Back to List", posts_path, class: "btn btn-light backBtn" %>
   </div>
 </div>
