--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
             <%= link_to "Home", "/", class: "nav-link" %>
           </li>
           <li class="nav-item active">
-            <%= link_to "Submissions", posts_path, class: "nav-link" %>
+            <%= link_to "Registrations", posts_path, class: "nav-link" %>
           </li>
            <li class="nav-item active">
             <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "btn-danger btn btn-sm" %>
