--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,7 +8,7 @@
       <h3>Rules for performers</h3>
       <h5>3 songs per set</h5>
       <h5>1 set per performer</h5>
-      <h5>Musicians arrive 6:30</h5>
+      <h5>Musicians arrive 6:30pm</h5>
       <h5>Event is 7-10pm</h5>
       <h5>Original music especially encouraged</h5>
     </div>
