added mailer btn

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,7 +27,6 @@
                   <%# <% end %>
 
                 </div>
-
               <% end %>
           <% else %>
               <hr>
@@ -36,4 +35,5 @@
             <% end %>
     </div>
   <hr>
+ <a href = "mailto: sararickt@gmail.com" class="btn btn-warning">Send Email</a>
 </div>
