--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style="text-align:center;">
   <div class="title">
     <h1>Monthly Open Mic Night</h1>
-      <h3 class="date">Join us on the 19th of August for our Open Mic Night at the Luus Muus in Egg</h3>
+      <h3 class="date">Join us on the 9th of September for our Open Mic Night at the Luus Muus in Egg</h3>
   </div>
   <div class="information">
     <div class="rules">
@@ -21,7 +21,7 @@
   </div>
 
   <div class="cta">
-    <h3>Sign up to join the line up on July 15</h3>
+    <h3>Sign up to join the line up on the 9th of September</h3>
   </div>
 
   <div class="btnIndex">
