--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,7 +4,7 @@ body {
   padding: 10px;
   background-image: url(https://images.unsplash.com/photo-1595971294624-80bcf0d7eb24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80);
   background-attachment: fixed;
-  background-position: center;
+  background-position: center center;
   background-size: cover;
     background-attachment: fixed;
     z-index: 0;
