--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,7 +1,7 @@
 // General Layout
 body {
-  min-height:100vh;
-  -webkit-background-size: cover;
+  // min-height:100vh;
+  // -webkit-background-size: cover;
   padding: 10px;
   background-image: url(https://images.unsplash.com/photo-1595971294624-80bcf0d7eb24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80);
   background-attachment: fixed;
@@ -67,4 +67,13 @@ body {
 
 .btnIndex {
   margin-bottom: 4.5em;
+}
+
+// media queries
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-image: url("open-mobile.png");
+  }
+
 }
