--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,5 +1,7 @@
 // General Layout
 body {
+  width: 100vw;
+  min-height: 100vh;
   // min-height:100vh;
   // -webkit-background-size: cover;
   padding: 10px;
