image on html and transparent body

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -20,6 +20,10 @@ html {
   // font-family: 'Poppins', sans-serif;
  }
 
+body {
+  background: transparent;
+}
+
 .container {
   color: antiquewhite;
   letter-spacing: 0.2em;
