--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,28 +1,29 @@
 // General Layout
-html {
-  // width: 100vw;
+body {
+
+  padding: 10px;
+  background-image: url(https://images.unsplash.com/photo-1595971294624-80bcf0d7eb24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80);
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: auto;
+  // z-index: 0;
+  // position: absolute;
+    // top: 0;
+    // right: 0;
+    // bottom: 0;
+    // left: 0;
+     // width: 100vw;
   // min-height: auto;
   // overflow-x: scroll;
 
   // min-height:100vh;
   // -webkit-background-size: cover;
-  padding: 10px;
-  background-image: url(https://images.unsplash.com/photo-1595971294624-80bcf0d7eb24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80);
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-    z-index: 0;
-    position: absolute;
-    // top: 0;
-    // right: 0;
-    // bottom: 0;
-    // left: 0;
   // font-family: 'Poppins', sans-serif;
  }
 
-body {
-  background: transparent;
-}
+// body {
+//     background: transparent;
+//   }
 
 .container {
   color: antiquewhite;
@@ -78,10 +79,9 @@ body {
 
 // media queries
 
-// @media only screen and (max-width: 600px) {
-//   body {
-//     background-image: url("open-mobile.png");
-//       overflow-x: scroll;
-//   }
-
-// }
+@media only screen and (max-width: 600px) {
+  body {
+    background-image: url("open-mobile.png");
+      // overflow-x: scroll;
+  }
+}
