rules div with grey bgcolor

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -84,4 +84,8 @@ body {
     background-image: url("open-mobile.png");
       // overflow-x: scroll;
   }
+
+  .rules {
+    background-color: grey;
+  }
 }
