--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,7 @@
 // General Layout
 body {
-
+  min-height: 987px;
+  width: 100%;
   padding: 10px;
   background-image: url(https://images.unsplash.com/photo-1595971294624-80bcf0d7eb24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80);
   background-position: center center;
@@ -15,15 +16,7 @@ body {
      // width: 100vw;
   // min-height: auto;
   // overflow-x: scroll;
-
-  // min-height:100vh;
-  // -webkit-background-size: cover;
-  // font-family: 'Poppins', sans-serif;
  }
-
-// body {
-//     background: transparent;
-//   }
 
 .container {
   color: antiquewhite;
@@ -85,7 +78,7 @@ body {
       // overflow-x: scroll;
   }
 
-  .rules {
-    background-color: grey;
-  }
+  // .rules {
+  //   background-color: grey;
+  // }
 }
