--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,26 +1,10 @@
 // General Layout
 body {
-  // min-height: 987px;
-  // width: 100%;
-  // padding: 10px;
   background-image: url(https://images.unsplash.com/photo-1595971294624-80bcf0d7eb24?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80);
   background-position: center center;
   background-attachment: fixed;
   background-size: auto;
-  // z-index: 0;
-  // position: absolute;
-    // top: 0;
-    // right: 0;
-    // bottom: 0;
-    // left: 0;
-     // width: 100vw;
-  // min-height: auto;
-  // overflow-x: scroll;
  }
-
-html {
-  min-height: 987px;
-}
 
 .container {
   color: antiquewhite;
@@ -77,9 +61,13 @@ html {
 // media queries
 
 @media only screen and (max-width: 600px) {
-  body {
+  .container {
     background-image: url("open-mobile.png");
-      // overflow-x: scroll;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: auto;
+
+    // overflow-x: scroll;
   }
 
   // .rules {
