media q + on mobile use container instead of body

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -69,7 +69,13 @@ body {
 
     // overflow-x: scroll;
   }
+  // .navbar {
+  //   background-color: grey;
+  // }
 
+  // .footer {
+  //   background-color: grey;
+  // }
   // .rules {
   //   background-color: grey;
   // }
