--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,7 +6,7 @@ body {
   background-size: auto;
  }
 
-.container {
+.container-info {
   color: antiquewhite;
   letter-spacing: 0.2em;
   backdrop-filter: blur(3px);
@@ -74,9 +74,6 @@ body {
   // }
 
   // .footer {
-  //   background-color: grey;
-  // }
-  // .rules {
   //   background-color: grey;
   // }
 }
