--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="text-align:center;">
+<div class="container-info" style="text-align:center;">
   <div class="title">
     <h1>Monthly Open Mic Night</h1>
       <h3 class="date">Join us on the 9th of September for our Open Mic Night at the Luus Muus in Egg</h3>
