--- a/app/assets/stylesheets/pages/posts.scss
+++ b/app/assets/stylesheets/pages/posts.scss
@@ -20,7 +20,7 @@
  }
 
  .post-section {
-  padding:10px;
+  padding:0.625em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,9 +32,9 @@
  .post {
   display: flex;
   flex-direction: column;
-  height: 180px;
+  height: 11.25em;
   justify-content: center;
-  width: 350px;
+  width: 21.875em;
   align-items: center;
   border-width: 1em;
   background-color: grey;
