bg image none test heroku

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -69,4 +69,15 @@ body {
     background-attachment: fixed;
     background-size: auto;
   }
+  .navbar {
+    background-image: none;
+  }
+
+  .btnIndex {
+    background-image: none;
+  }
+
+  .footer {
+    background-image: none;
+  }
 }
