added bg colour draft+unicode hands benefits sction -> then commented waiting for feedback

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -69,4 +69,22 @@ body {
     background-attachment: fixed;
     background-size: auto;
   }
+  // block colour background draft
+
+  // .title {
+  //   background-color: grey;
+  //   padding-bottom: 0.1em;
+  // }
+  // .rules {
+  //   background-color: darkgrey;
+  //   padding-bottom: 0.1em;
+  // }
+  // .benefits {
+  //   background-color: grey;
+  //   padding-bottom: 0.1em;
+  // }
+  // .cta {
+  //   background-color: darkgrey;
+  //   padding-bottom: 0.1em;
+  // }
 }
