--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -16,7 +16,7 @@
 
     <div class="benefits">
       <h3>Benefits</h3>
-      <h5>One free drink</h5>
+      <h5>One free drink </h5>
       <h5>50% off food & drinks</h5>
       </div>
   </div>
@@ -29,3 +29,5 @@
     <%= link_to "Sign Up", posts_path, class: "btn-primary btn btn-lg"%>
   </div>
 </div>
+
+<%# <h5>&#9758; One free drink &#9756;</h5> %>
