heigh:fit content

--- a/app/assets/stylesheets/pages/posts.scss
+++ b/app/assets/stylesheets/pages/posts.scss
@@ -32,8 +32,8 @@
  .post {
   display: flex;
   flex-direction: column;
-  flex-basis: fit-content;
-  height: 11.25em;
+  height: fit-content;
+  // height: 11.25em;
   justify-content: center;
   width: 21.875em;
   align-items: center;
