changd new post colouur -> more legible against bg image

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="titlepost">
+  <div class="titlepost" style="color: antiquewhite;">
     <h1>New Registration</h1>
   </div>
 
