--- a/app/assets/stylesheets/pages/posts.scss
+++ b/app/assets/stylesheets/pages/posts.scss
@@ -10,8 +10,13 @@
   padding-bottom: 1.5em;
   text-align: center;
   h1 {
+    color: antiquewhite;
     font-weight: 900;
   }
+ }
+
+ label {
+  color: antiquewhite;
  }
 
  .buttonSignUp {
@@ -33,7 +38,6 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
-  // height: 11.25em;
   justify-content: center;
   width: 21.875em;
   align-items: center;
@@ -47,10 +51,10 @@
 
 // Post Show
 .showCard {
-  text-align: center;
+  backdrop-filter: blur(5px);
   padding-top: 1.5em;
   padding-bottom: 1.5em;
-  backdrop-filter: blur(5px);
+  text-align: center;
 }
 
 .buttonsShow {
@@ -72,19 +76,22 @@
 
 // Post New
 .newForm {
-  text-align: center;
   padding-top: 1.5em;
+  text-align: center;
 }
 
 .bandInfo {
   font-size: 0.7rem;
   font-style: italic;
+  p {
+    color: antiquewhite;
+  }
 }
 
 .formSubmit {
   margin-top: 1em;
-  text-align: center;
   margin-top: 1.5em;
+  text-align: center;
   input {
     background-color: rgb(40, 167 , 70);
     border: none;
