colour change edit / show

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="titlepost">
+  <div class="titlepost" style="color:antiquewhite;">
     <h1>Edit Registration</h1>
   </div>
 
