--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <p style="color: chartreuse; font-size: 1.5em;"><%= notice %></p>
-<h1 class="titlePost" style="text-align:center;">Registration</h1>
+<h1 class="titlePost" style="text-align:center; color:antiquewhite;">Registration</h1>
 <div class="showCard">
   <%# <% if current_user %>
     <%= render @post %>
